--- a/dates/templates/dates/add_reminder.html
+++ b/dates/templates/dates/add_reminder.html
@@ -20,9 +20,15 @@
         <div class="container">
             <h2 class="my-4">Add a new Reminder</h2>
             <form method="post" enctype="multipart/form-data">
+                {% csrf_token %}
                 {{ reminder_form }}
                 <button class="btn btn-primary my-4" type="submit">Submit</button>
             </form>
         </div>
+        <script 
+            src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" 
+            integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" 
+            crossorigin="anonymous">
+        </script>
     </body>
 </html>
