--- a/dates/templates/dates/add_reminder.html
+++ b/dates/templates/dates/add_reminder.html
@@ -1,22 +1,5 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <!-- Required meta tags -->
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-
-        <!-- Bootstrap CSS -->
-        <link 
-            href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" 
-            rel="stylesheet" 
-            integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
-            crossorigin="anonymous"
-        >
-
-        <title>Add Reminder</title>
-    </head>
-
-    <body>
+{% extends "base.html" %}
+{% block content %}
         {% load crispy_forms_tags %}
         <div class="container">
             <h2 class="my-4">Add a new Reminder</h2>
@@ -26,10 +9,4 @@
                 <button class="btn btn-primary my-4" type="submit">Submit</button>
             </form>
         </div>
-        <script 
-            src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" 
-            integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" 
-            crossorigin="anonymous">
-        </script>
-    </body>
-</html>
+{% endblock %}
