--- a/remember/templates/allauth/account/login.html
+++ b/remember/templates/allauth/account/login.html
@@ -2,6 +2,9 @@
 
 {% load i18n %}
 {% load account socialaccount %}
+{% load bootstrap5 %}
+{% load crispy_forms_tags %}
+
 
 {% block head_title %}{% trans "Sign In" %}{% endblock %}
 
@@ -35,12 +38,16 @@ for a {{ site_name }} account and sign in below:{% endblocktrans %}</p>
 
 <form class="login" method="POST" action="{% url 'account_login' %}">
   {% csrf_token %}
-  {{ form.as_p }}
+  {{ form|crispy }}
   {% if redirect_field_value %}
-  <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
+  <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}"/>
   {% endif %}
   <a class="button secondaryAction" href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a>
-  <button class="primaryAction" type="submit">{% trans "Sign In" %}</button>
+  {% buttons %}
+  <div class="d-grid gap-2">
+    <button class="btn btn-primary  " type="submit">{% trans "Sign In" %}</button>
+  </div>
+  {% endbuttons %}
 </form>
 
 {% endblock %}
