--- a/dates/templates/dates/main.html
+++ b/dates/templates/dates/main.html
@@ -1,24 +1,19 @@
 {% extends 'base/base_app.html'%}
 
-
 {% block content %}
+
+    {% include 'base/menu.html' %}
 
     {% for reminder in reminders %}
 
         <div class="card mt-5">
 
             <div class="card-body">
-                {{ reminder.related_person_name }}
+                <p>Related Name: {{ reminder.related_person_name }}</p>
+                <p>Description: {{ reminder.description }}</p>
+                <p>Date: {{ reminder.date }}</p>
             </div>
-            <div class="card-footer">
-                {{ reminder.user }}
-            </div>
-            <div class="card-footer">
-                {{ reminder.date }}
-            </div>
-
         </div>
-
     {% endfor %}
 
 {% endblock %}
