--- a/dates/templates/dates/main.html
+++ b/dates/templates/dates/main.html
@@ -22,5 +22,5 @@
 {% endblock %}
 
 {% block extra_body %}
-    <script src="{% static 'js/index.js' %}"></script>
+    <script type='text/javascript' src="{% static 'js/index.js' %}"></script>
 {% endblock %}
