--- a/dates/static/css/calendar.css
+++ b/dates/static/css/calendar.css
@@ -1,4 +1,6 @@
 body {
+  font-family: sans-serif;
+  font-weight: 100;
   --grey-100: #e4e9f0;
   --grey-200: #cfd7e3;
   --grey-300: #b5c0cd;
@@ -7,18 +9,19 @@ body {
   --day-label-size: 20px;
 }
 
-ol li {
+ol,
+li {
+  padding: 0;
+  margin: 0;
   list-style: none;
 }
 
 .calendar-month {
   position: relative;
-  /* Color of the day cell borders */
   background-color: var(--grey-200);
   border: solid 1px var(--grey-200);
 }
 
-/* Month indicator and selectors positioning */
 .calendar-month-header {
   display: flex;
   justify-content: space-between;
@@ -26,13 +29,11 @@ ol li {
   padding: 10px;
 }
 
-/* Month indicator */
 .calendar-month-header-selected-month {
   font-size: 24px;
   font-weight: 600;
 }
 
-/* Month selectors positioning */
 .calendar-month-header-selectors {
   display: flex;
   align-items: center;
@@ -44,7 +45,6 @@ ol li {
   cursor: pointer;
 }
 
-/* | Mon | Tue | Wed | Thu | Fri | Sat | Sun | */
 .day-of-week {
   color: var(--grey-800);
   font-size: 18px;
@@ -55,13 +55,11 @@ ol li {
 
 .day-of-week,
 .days-grid {
-  /* 7 equal columns for weekdays and days cells */
   display: grid;
   grid-template-columns: repeat(7, 1fr);
 }
 
 .day-of-week > * {
-  /* Position the weekday label within the cell */
   text-align: right;
   padding-right: 5px;
 }
@@ -69,7 +67,6 @@ ol li {
 .days-grid {
   height: 100%;
   position: relative;
-  /* Show border between the days */
   grid-column-gap: var(--grid-gap);
   grid-row-gap: var(--grid-gap);
   border-top: solid 1px var(--grey-200);
@@ -84,7 +81,6 @@ ol li {
   padding: 5px;
 }
 
-/* Position the day label within the day cell */
 .calendar-day > span {
   display: flex;
   justify-content: center;
@@ -93,4 +89,19 @@ ol li {
   right: 2px;
   width: var(--day-label-size);
   height: var(--day-label-size);
+}
+
+.calendar-day--not-current {
+  background-color: var(--grey-100);
+  color: var(--grey-300);
+}
+
+.calendar-day--today {
+  padding-top: 4px;
+}
+
+.calendar-day--today > span {
+  color: #fff;
+  border-radius: 9999px;
+  background-color: var(--grey-800);
 }
