--- a/dates/templates/dates/main.html
+++ b/dates/templates/dates/main.html
@@ -1,5 +1,7 @@
-{% extends 'base/base_app.html'%}
+{% extends 'base.html'%}
 {% load static %}
+
+{% block head_title %}My Reminders{% endblock %}
 
 {% block extra_head %}
     <link rel="stylesheet" href="{% static 'css/calendar.css' %}">
@@ -19,6 +21,26 @@
             </div>
         </div>
     {% endfor %}
+
+
+    <div class="modal" id="reminderModal" tabindex="-1">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title">Modal title</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body">
+            <p>Modal body text goes here.</p>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+            <button type="button" class="btn btn-primary">Save changes</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
 {% endblock %}
 
 {% block extra_body %}
@@ -26,4 +48,5 @@
     <script src="https://unpkg.com/dayjs@1.8.21/plugin/weekday.js"></script>
     <script src="https://unpkg.com/dayjs@1.8.21/plugin/weekOfYear.js"></script>
     <script src="{% static 'js/index.js'%}"></script>
+    <script src="{% static 'js/script.js'%}"></script>
 {% endblock %}
