--- a/dates/templates/dates/main.html
+++ b/dates/templates/dates/main.html
@@ -12,15 +12,26 @@
 
     {% include 'base/calendar.html'%}
 
-    {% for reminder in reminders %}
-        <div class="card mt-5">
-            <div class="card-body">
-                <p>Related Name: {{ reminder.related_person_name }}</p>
-                <p>Description: {{ reminder.description }}</p>
-                <p>Date: {{ reminder.date }}</p>
+    <!-- Just included to separate cards from calendar -->
+    <br>
+
+    <div class="row h-100 justify-content-center align-items-center">
+      <div class="col-6">
+        {% for reminder in reminders %}
+        
+            <div class="card border border-primary shadow-0 mb-3" style="max-width: 48rem;">
+              <div class="card-body text-primary">
+                <h5 class="card-title"><span style="font-weight: bold;">Related Name:</span> {{ reminder.related_person_name }}</h5>
+                <hr>
+                <p class="card-text"><span style="font-weight: bold;">Description:</span> {{ reminder.description }}</p>
+                <hr>
+                <p class="card-text"><span style="font-weight: bold;">Date:</span> {{ reminder.date }}</p>
+              </div>
             </div>
-        </div>
-    {% endfor %}
+        
+        {% endfor %}
+      </div>
+    </div>
 
 
     <div class="modal" id="reminderModal" tabindex="-1">
