remove action url from reminder modal form

--- a/remember/templates/base/reminder_form.html
+++ b/remember/templates/base/reminder_form.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <form method="post" enctype="multipart/form-data" action="http://127.0.0.1:8000/main/">
+    <form method="post" enctype="multipart/form-data">
         {% csrf_token %}
         
 
