--- a/remember/templates/base/calendar.html
+++ b/remember/templates/base/calendar.html
@@ -5,9 +5,21 @@
       class="calendar-month-header-selected-month"
     ></div>
     <section class="calendar-month-header-selectors">
-      <span id="previous-month-selector"><</span>
+      <span id="previous-month-selector"
+        hx-get="/reminders/"
+        hx-trigger="click"
+        hx-vals='js:{monthYear: getMonthYear()}'
+        hx-target="#reminderWrapper"
+        hx-swap="innerHTML"
+        ><</span>
       <span id="present-month-selector">Today</span>
-      <span id="next-month-selector">></span>
+      <span id="next-month-selector"
+        hx-get="/reminders/"
+        hx-trigger="click"
+        hx-vals='js:{monthYear: getMonthYear()}'
+        hx-target="#reminderWrapper"
+        hx-swap="innerHTML"
+        >></span>
     </section>
   </section>
 
