--- a/dates/templates/dates/main.html
+++ b/dates/templates/dates/main.html
@@ -18,31 +18,7 @@
 
     <div class="row h-100 justify-content-center align-items-center">
       <div class="col-6" id="reminderWrapper">
-          {% for reminder in reminders %}
-            <div class="card border border-primary shadow-0 mb-3" style="max-width: 48rem;">
-              <div class="card-body text-primary">
-                <h5 class="card-title"><span style="font-weight: bold; margin: 0px;">Related Name:</span> {{ reminder.related_person_name }}
-                    <a 
-                      class="btn btn-link" 
-                      style="float: right;" 
-                      href="{% url  'delete-reminder' reminder.id %}" 
-                      role="button"
-                      hx-get="{% url  'delete-reminder' reminder.id %}"
-                      hx-trigger="click"
-                      hx-vals='js:{monthYear: getMonthYear()}'
-                      hx-target="#reminderWrapper"
-                      hx-swap="innerHTML"
-                    >
-                      <i class="fa fa-trash"></i>
-                    </a>
-                </h5>
-                <hr>
-                <p class="card-text"><span style="font-weight: bold;">Description:</span> {{ reminder.description }}</p>
-                <hr>
-                <p class="card-text"><span style="font-weight: bold;">Date:</span> {{ reminder.date }}</p>
-              </div>
-            </div>
-          {% endfor %}
+          {% include 'dates/reminders.html'%}
       </div>
     </div>
 
