--- a/remember/templates/base/menu.html
+++ b/remember/templates/base/menu.html
@@ -10,7 +10,7 @@
                     <a class="nav-link active" aria-current="page" href="{% url 'main' %}">Main</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active" href="#">Profile</a>
+                    <a class="nav-link active" href="{% url 'profile' %}">Profile</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link active" href="#">Contact</a>
