create an html snippet for profile form and remove the useless add_reminder.html

--- a/dates/templates/dates/profile.html
+++ b/dates/templates/dates/profile.html
@@ -10,8 +10,8 @@
 
 {% block content %}
     {% include 'base/menu.html' %}
-
     
+    {% include 'dates/profile_form.html' %}
 
 {% endblock %}
 
