--- a/dates/templates/dates/profile_form.html
+++ b/dates/templates/dates/profile_form.html
@@ -5,6 +5,7 @@
     <form method="post" enctype="multipart/form-data">
         {% csrf_token %}
         {{ user_form|crispy }}
+        {{ profile_form|crispy }}
         <button class="btn btn-primary my-4" type="submit">Submit</button>
     </form>
 </div>
