--- a/remember/templates/base/menu.html
+++ b/remember/templates/base/menu.html
@@ -13,7 +13,7 @@
                     <a class="nav-link active" href="{% url 'profile' %}">Profile</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active" href="#">Contact</a>
+                    <a class="nav-link active" href="{% url 'contact' %}">Contact</a>
                 </li>
             </ul>
         </div>
